Add new components

--- a/src/components/Display.module.css
+++ b/src/components/Display.module.css
@@ -1,6 +1,6 @@
 .display {
   position: absolute;
-  font-size: 36px;
-  font-weight: bold;
-  transform: translateY(-6px);
+  font-size: 54px;
+  transform: translate3D(3px, 2px, 0);
+  font-family: digital-7-mono;
 }
