--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
+:root {
+  --primary-color: #3f8cba;
+}
+
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 80vh;
+}
+
+#sessions {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
 }
