Replace digital font

--- a/src/components/Display.module.css
+++ b/src/components/Display.module.css
@@ -2,5 +2,5 @@
   position: absolute;
   font-size: 54px;
   transform: translate3D(3px, 2px, 0);
-  font-family: digital-7-mono;
+  font-family: 'DS-Digital';
 }
