--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,13 @@
   justify-content: space-between;
   width: 400px;
 }
+
+@media screen and (max-width: 520px) {
+  #sessions {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: -20px;
+    height: 180px;
+  }
+}
