--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@ h1 {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+@media screen and (max-width: 520px) {
+  h1 {
+    font-size: 32px;
+  }
+}
