--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,38 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+}
+
+h1 {
+  width: 100%;
+  margin: 0;
+  font-size: 42px;
+  text-align: center;
+  padding: 3rem;
+  background: var(--primary-color);
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 520px) {
+  h1 {
+    font-size: 32px;
+  }
 }
 
 #sessions {
   display: flex;
   justify-content: space-between;
   width: 400px;
+  margin-top: 5rem;
 }
 
 @media screen and (max-width: 520px) {
   #sessions {
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 3rem;
     margin-bottom: -20px;
     height: 180px;
   }
